# alpha_pars

./: .gitignore  CMakeLists.txt
include/: database.h  getdate.h  logparser.h  logreader.h  textprotocol.h
src/: CMakeLists.txt  database.cpp  getdate.cpp  logparser.cpp  logreader.cpp  main.cpp
